2003-06-15  Alexandre Pigolkine <pigolkine@gmx.de>
	* ItfImage.cs		properties uncommented

2003-05-25  Alexandre Pigolkine <pigolkine@gmx.de>
	* ItfImage.cs		PixelFormat property

2003-04-26  Alexandre Pigolkine <pigolkine@gmx.de>
	* ItfBitmap.cs
	* ItfBrush.cs
	* ItfFont.cs
	* ItfGraphics.cs
	* ItfIcon.cs
	* ItfImage.cs
	* ItfPen.cs
	* ItfRegion.cs
	* ItfSolidBrush.cs
	* ItfTextureBrush.cs
			first version of internal interfaces for virtual implementations