@@ -1,3 +1,6 @@
+2003-06-22  Alexandre Pigolkine <pigolkine@gmx.de>
+	* FontFamily.cs 	added
+
 2003-06-18  Alexandre Pigolkine <pigolkine@gmx.de>
 	* Bitmap.cs		
 	* Graphics.cs 	
